# DiscOverlay

./: .editorconfig  README.md  package.json  pnpm-lock.yaml  svelte.config.js
.github/: FUNDING.yml
.github/workflows/: publish.yml
src/: app.css  app.html  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json  overlays.json
src-tauri/discord-ipc-rust/: Cargo.toml
src-tauri/discord-ipc-rust/src/: ipc.rs  ipc_socket.rs  lib.rs
src-tauri/discord-ipc-rust/src/models/: rpc_command.rs  rpc_event.rs
src-tauri/discord-ipc-rust/src/models/events/: base.rs  mod.rs
src-tauri/discord-ipc-rust/src/models/shared/: voice_state.rs
src-tauri/icons/: icon.icns
src-tauri/src/: custom_css.rs  logging.rs  main.rs  overlays.rs  settings.rs  updater.rs
src-tauri/src/commands/: auth.rs  discord.rs  mod.rs  overlay.rs  settings.rs
src-tauri/src/discord/: config.rs  http.rs  ipc.rs  mod.rs
src/lib/: authentication.ts  discord_settings.ts  overlay.ts  settings.ts  twemoji.svelte.ts  updater.ts  utils.ts  voice.ts
src/lib/components/: Authenticated.svelte  Footer.svelte  TitleBar.svelte  Toggle.svelte  VoiceOverlaySettings.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/message-overlay/: +page.svelte
src/routes/overlay/: +page.svelte
src/routes/voice-overlay/: +page.svelte
static/: tauri.conf.json
