[package]
name = "DiscOverlay"
version = "0.1.0"
description = "A third-party Discord overlay"
authors = ["Deftu"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Deftu/DiscOverlay"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

tauri = { version = "1.7.2", features = [ "window-set-ignore-cursor-events", "shell-open", "window-start-dragging", "window-close", "window-show", "window-minimize", "window-hide", "window-unminimize", "devtools"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

rpc-discord = { path = "./discord-ipc-rust" }
oauth2 = "4.4.2"
webbrowser = "1.0.1"
axum = "0.7.5"
axum-extra = "0.7.4"
http = "1.1.0"
open = "3.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
