[package]
name = "DiscOverlay"
version = "0.2.0"
description = "A third-party Discord overlay"
authors = ["Deftu"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Deftu/DiscOverlay"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

tauri = { version = "2.0.0-rc", features = [ "unstable", "devtools", "macos-private-api"] }
tauri-plugin-single-instance = "2.0.0-rc"

# discord-ipc-rust = { version = "0.1.4", git = "https://github.com/Deftu/discord-ipc-rust.git" }
discord-ipc-rust = { path = "../../discord-ipc-rust" }
oauth2 = "4.4.2"
webbrowser = "1.0.1"
axum = "0.7.5"
axum-extra = "0.7.4"
http = "1.1.0"
open = "3.2.0"
notify = "6.1.1"
percent-encoding = "2.3.1"
futures = "0.3.30"
chrono = "0.4.31"

log = "0.4.22"
log4rs = { version = "1.2.0", features = ["gzip", "pattern_encoder", "console_appender", "rolling_file_appender"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
